--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "styled-components": "^5.3.3"
