--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@reduxjs/toolkit": "^1.8.3",
@@ -17,8 +18,11 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-skeleton-placeholder": "^5.0.0",
+    "react-native-svg": "^12.4.1",
     "react-redux": "^8.0.2",
     "styled-components": "^5.3.3"
   },
