--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-bouncy-checkbox": "^3.0.2",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^3.3.2",
