--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.24.0",
+    "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-bouncy-checkbox": "^3.0.2",
