--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-bouncy-checkbox": "^3.0.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-skeleton-placeholder": "^5.0.0",
-    "react-native-svg": "^12.4.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^8.0.2",
     "styled-components": "^5.3.3"
   },
@@ -35,6 +36,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-jest": "^26.6.3",
