--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.24.0",
     "lottie-react-native": "^5.1.4",
-    "react": "17.0.2",
-    "react-native": "0.66.3",
+    "react": "18.2.0",
+    "react-native": "0.71.0",
     "react-native-bouncy-checkbox": "^3.0.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
@@ -33,18 +33,21 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
+    "@react-native-community/eslint-config": "^3.0.0",
+		"@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+		"@types/react": "^18.0.24",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.1.3",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "^0.73.5",
+		"prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@types/react": "^17"
