--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "axios": "^0.24.0",
     "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
-    "react-native": "0.71.0",
+    "react-native": "0.71.1",
     "react-native-bouncy-checkbox": "^3.0.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "3.9.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-skeleton-placeholder": "^5.0.0",
@@ -31,12 +32,13 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
-		"@tsconfig/react-native": "^2.0.2",
+    "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
-		"@types/react": "^18.0.24",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
@@ -44,8 +46,8 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "^0.73.5",
-		"prettier": "^2.4.1",
+    "metro-react-native-babel-preset": "^0.73.7",
+    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.8.4"
   },
