--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-otp-entry": "^1.8.2",
     "react-native-otp-verify": "^1.1.8",
     "react-native-reanimated": "3.9.0",
     "react-native-safe-area-context": "^3.3.2",
