--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,7 +22,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'MyApp' do
+target 'RestaurantsOfTheWorld' do
   config = use_native_modules!
 
 	# Flags change depending on the env values.
@@ -44,7 +44,7 @@ target 'MyApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'MyAppTests' do
+  target 'RestaurantsOfTheWorldTests' do
     inherit! :complete
     # Pods for testing
   end
