--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+apply plugin: "com.google.gms.google-services"
 
 import com.android.build.OutputFile
 
@@ -163,6 +164,9 @@ android {
 dependencies {
 		// The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+		
+		implementation("com.google.firebase:firebase-bom:33.7.0")
+		implementation("com.google.firebase:firebase-auth")
 
 		implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
 
