--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 21
-        compileSdkVersion = 33
+        minSdkVersion = 23
+        compileSdkVersion = 34
         targetSdkVersion = 33
         ndkVersion = "23.1.7779620"
 				kotlinVersion = '1.5.20'
@@ -16,5 +16,6 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
 				classpath("com.facebook.react:react-native-gradle-plugin")
+				classpath("com.google.gms:google-services:4.3.15")
     }
 }
