--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.24.0",
+    "formik": "^2.4.6",
     "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
@@ -32,7 +34,8 @@
     "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^8.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
