--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 23
+        minSdkVersion = 26
         compileSdkVersion = 34
         targetSdkVersion = 33
         ndkVersion = "23.1.7779620"
-				kotlinVersion = '1.5.20'
+				kotlinVersion = '1.9.0'
     }
     repositories {
         google()
@@ -17,5 +17,21 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.3.1")
 				classpath("com.facebook.react:react-native-gradle-plugin")
 				classpath("com.google.gms:google-services:4.3.15")
+				classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
+}
+
+allprojects {
+		repositories {
+				maven {
+						url 'https://api.mapbox.com/downloads/v2/releases/maven'
+						authentication {
+								basic(BasicAuthentication)
+						}
+						credentials {
+								username = 'mapbox'
+								password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+						}
+				}
+		}
 }
