--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@rnmapbox/maps": "^10.1.33",
     "axios": "^0.24.0",
     "formik": "^2.4.6",
     "lottie-react-native": "^5.1.4",
