--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rnmapbox/maps": "^10.1.33",
     "axios": "^0.24.0",
     "formik": "^2.4.6",
+    "geojson": "^0.5.0",
     "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
