--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-bouncy-checkbox": "^3.0.2",
+    "react-native-credit-card-input": "^1.0.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
