--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@rnmapbox/maps": "^10.1.33",
+    "@stripe/stripe-react-native": "^0.41.0",
     "axios": "^0.24.0",
     "formik": "^2.4.6",
     "geojson": "^0.5.0",
